--- a/project/src/main/res/values-pt-rBR/strings.xml
+++ b/project/src/main/res/values-pt-rBR/strings.xml
@@ -212,6 +212,11 @@
     <!-- Text for enter payment details line 2 -->
     <string name="checkout_hotelsv2_enter_payment_details_line2">Selecione um método de pagamento</string>
 
+    <!-- Hotels V2 slide to reserve -->
+    <string name="hotelsv2_slide_reserve">Deslize para reservar</string>
+    <!-- Hotels V2 slide to purchase -->
+    <string name="hotelsv2_slide_purchase">Deslize para comprar</string>
+
     <!-- Car error strings -->
     <!-- Message for user that pick-up time is too early."  -->
     <string name="pick_up_time_error">Ajuste seus horários de retirada e entrega.</string>
@@ -221,7 +226,7 @@
     <string name="date_out_of_range">Esta data está muito distante. Selecione uma data mais próxima.</string>
     <!-- Message for user that increase your reservation duration. -->
     <string name="reservation_time_too_short">Aumente a duração da reserva.</string>
-    <!-- Shown to user when they try to book something already booked -->
+    <!-- Shown to user in case the reservation timed out -->
     <string name="reservation_time_out">Ainda está aí? Sua sessão expirou. Tente buscar novamente.</string>
     <!-- Shown to user when they try to book something already booked -->
     <string name="reservation_already_exists">Ops. Parece que você já reservou esta viagem. Verifique suas viagens ou e-mails.</string>
@@ -835,7 +840,7 @@
     <!-- Rooms and rates pay now -->
     <string name="room_rate_pay_now">Pagar agora</string>
     <!-- Rooms and rates pay later deposit due now -->
-    <string name="room_rate_pay_later_due_now">Devido agora</string>
+    <string name="room_rate_pay_later_due_now">{amount} devido agora</string>
     <!-- Rooms and rates price/night, i.e. $100/night -->
     <string name="room_rate_per_night_template">%s/noite</string>
     <!-- Rooms and rates resort fees template when fees are included in price displayed i.e. This hotel charges additional fees of $25 -->
@@ -2569,6 +2574,8 @@
     <!-- Price displayed on map pop-up bubbles (e.g., "From $179").  (HP, SH) -->
     <string name="map_snippet_price_template">A partir de %s</string>
     <string name="From_x_per_night_template">A partir de %s/noite</string>
+    <!-- Button text prompting the user to search this area on the map -->
+    <string name="Search_this_area">Buscar nesta área</string>
 
     <!-- Widget -->
     <!-- Default Loading message for widget -->
@@ -2586,7 +2593,7 @@
     <!-- Label for button that lets the user complete the booking through the normal flow -->
     <string name="book_now_ab_test">Selecionar quarto</string>
     <!-- Label for button that lets the user complete the booking by calling a phone number -->
-    <string name="book_by_phone">Reserve pelo telefone</string>
+    <string name="book_by_phone">Reserve por telefone</string>
     <!-- Hotel Details Fragment -->
     <!-- Title for VIP Access message -->
     <string name="vip_access">+VIP Access</string>
@@ -2675,6 +2682,15 @@
     <string name="AmenityExtendedParking">Estacionamento prolongado</string>
     <!-- Free parking amenity -->
     <string name="AmenityFreeParking">Estacionamento grátis</string>
+
+    <!-- Hotel Filter Amenities -->
+    <!-- Free internet -->
+    <string name="FilterFreeInternet">Internet grátis</string>
+    <!-- Free breakfast -->
+    <string name="FilterFreeBreakfast">Café da manhã grátis</string>
+    <!-- Free airport shuttle amenity -->
+    <string name="FilterFreeAirportShuttle">Traslado grátis de/para o aeroporto</string>
+
 
     <!-- User Reviews list strings -->
     <!-- Loading text prompt -->
@@ -2810,7 +2826,8 @@
     <string name="not_included_in_the_price">Não incluídas no preço</string>
     <!-- View Room button text -->
     <string name="view_room_button_text">Visualizar quarto</string>
-
+    <!-- Book Room button text -->
+    <string name="book_room_button_text">Reservar</string>
     <!-- Share via when user is shareing hotel listing -->
     <string name="share_via">Compartilhar via</string>
     <!-- Renovation Notice -->
@@ -3716,9 +3733,11 @@
     <!-- Children age label on hotel search -->
     <string name="children_age_label">(0-17 anos)</string>
 
-    <!-- Filters Strings -->
+    <!-- Hotel Filters Strings -->
     <string name="neighborhoods">Arredores</string>
     <string name="amenities">Comodidades</string>
     <string name="plus_vip">+VIP</string>
     <string name="star_rating">Classificação por estrelas</string>
+    <string name="show_more">MOSTRAR MAIS</string>
+    <string name="show_less">MOSTRAR MENOS</string>
 </resources>
