--- a/project/src/main/res/values-da/strings.xml
+++ b/project/src/main/res/values-da/strings.xml
@@ -212,6 +212,11 @@
     <!-- Text for enter payment details line 2 -->
     <string name="checkout_hotelsv2_enter_payment_details_line2">Vælg betalingstype</string>
 
+    <!-- Hotels V2 slide to reserve -->
+    <string name="hotelsv2_slide_reserve">Skub for at reservere</string>
+    <!-- Hotels V2 slide to purchase -->
+    <string name="hotelsv2_slide_purchase">Skub for at gennemføre dit køb</string>
+
     <!-- Car error strings -->
     <!-- Message for user that pick-up time is too early."  -->
     <string name="pick_up_time_error">Tilpas tidspunkter for aflevering og afhentning.</string>
@@ -221,7 +226,7 @@
     <string name="date_out_of_range">Denne dato ligger for langt ude i fremtiden. Vælg en tidligere dato.</string>
     <!-- Message for user that increase your reservation duration. -->
     <string name="reservation_time_too_short">Forlæng reservationsperioden.</string>
-    <!-- Shown to user when they try to book something already booked -->
+    <!-- Shown to user in case the reservation timed out -->
     <string name="reservation_time_out">Er du der stadig? Din session er udløbet. Prøv venligst igen.</string>
     <!-- Shown to user when they try to book something already booked -->
     <string name="reservation_already_exists">Hmm. Det ser ud til, at du allerede har reserveret denne rejse. Kontroller venligst dine rejser eller din e-mail.</string>
@@ -835,7 +840,7 @@
     <!-- Rooms and rates pay now -->
     <string name="room_rate_pay_now">Betal nu</string>
     <!-- Rooms and rates pay later deposit due now -->
-    <string name="room_rate_pay_later_due_now">Til betaling nu</string>
+    <string name="room_rate_pay_later_due_now">{amount} til betaling nu</string>
     <!-- Rooms and rates price/night, i.e. $100/night -->
     <string name="room_rate_per_night_template">%s/nat</string>
     <!-- Rooms and rates resort fees template when fees are included in price displayed i.e. This hotel charges additional fees of $25 -->
@@ -2569,6 +2574,8 @@
     <!-- Price displayed on map pop-up bubbles (e.g., "From $179").  (HP, SH) -->
     <string name="map_snippet_price_template">Fra %s</string>
     <string name="From_x_per_night_template">Fra %s/nat</string>
+    <!-- Button text prompting the user to search this area on the map -->
+    <string name="Search_this_area">Søg i dette område</string>
 
     <!-- Widget -->
     <!-- Default Loading message for widget -->
@@ -2676,9 +2683,18 @@
     <!-- Free parking amenity -->
     <string name="AmenityFreeParking">Gratis parkering</string>
 
+    <!-- Hotel Filter Amenities -->
+    <!-- Free internet -->
+    <string name="FilterFreeInternet">Gratis internet</string>
+    <!-- Free breakfast -->
+    <string name="FilterFreeBreakfast">Gratis morgenmad</string>
+    <!-- Free airport shuttle amenity -->
+    <string name="FilterFreeAirportShuttle">Gratis lufthavnstransport</string>
+
+
     <!-- User Reviews list strings -->
     <!-- Loading text prompt -->
-    <string name="user_review_loading_text">Henter brugeranmeldelser…</string>
+    <string name="user_review_loading_text">Indlæser gæsteanmeldelser…</string>
     <!-- Header for reviews of the non-native language -->
     <string name="user_review_other_languages_title">Anmeldelser på andre sprog</string>
     <!-- The text for the sort button, recent -->
@@ -2810,7 +2826,8 @@
     <string name="not_included_in_the_price">Ikke inkluderet i prisen</string>
     <!-- View Room button text -->
     <string name="view_room_button_text">Se værelse</string>
-
+    <!-- Book Room button text -->
+    <string name="book_room_button_text">Book</string>
     <!-- Share via when user is shareing hotel listing -->
     <string name="share_via">Del via</string>
     <!-- Renovation Notice -->
@@ -3716,9 +3733,11 @@
     <!-- Children age label on hotel search -->
     <string name="children_age_label">(0-17 år gammel)</string>
 
-    <!-- Filters Strings -->
+    <!-- Hotel Filters Strings -->
     <string name="neighborhoods">Kvarterer</string>
     <string name="amenities">Faciliteter</string>
     <string name="plus_vip">+VIP</string>
     <string name="star_rating">Antal stjerner</string>
+    <string name="show_more">VIS MERE</string>
+    <string name="show_less">VIS MINDRE</string>
 </resources>
