--- a/project/src/main/res/values-es-rES/strings.xml
+++ b/project/src/main/res/values-es-rES/strings.xml
@@ -212,6 +212,11 @@
     <!-- Text for enter payment details line 2 -->
     <string name="checkout_hotelsv2_enter_payment_details_line2">Selecciona el tipo de pago</string>
 
+    <!-- Hotels V2 slide to reserve -->
+    <string name="hotelsv2_slide_reserve">Desliza para reservar</string>
+    <!-- Hotels V2 slide to purchase -->
+    <string name="hotelsv2_slide_purchase">Desliza para realizar la compra</string>
+
     <!-- Car error strings -->
     <!-- Message for user that pick-up time is too early."  -->
     <string name="pick_up_time_error">Modifica el horario de recogida o entrega.</string>
@@ -221,7 +226,7 @@
     <string name="date_out_of_range">La fecha está demasiado lejana en el tiempo, elige otra más cercana.</string>
     <!-- Message for user that increase your reservation duration. -->
     <string name="reservation_time_too_short">Debes aumentar la duración de la reserva.</string>
-    <!-- Shown to user when they try to book something already booked -->
+    <!-- Shown to user in case the reservation timed out -->
     <string name="reservation_time_out">¿Aún sigues ahí? La sesión ha caducado. Vuelve a intentarlo.</string>
     <!-- Shown to user when they try to book something already booked -->
     <string name="reservation_already_exists">Vaya. Parece que ya has reservado este viaje. Comprueba la sección Viajes o tu correo electrónico.</string>
@@ -835,7 +840,7 @@
     <!-- Rooms and rates pay now -->
     <string name="room_rate_pay_now">Pagar ahora</string>
     <!-- Rooms and rates pay later deposit due now -->
-    <string name="room_rate_pay_later_due_now">A pagar ahora</string>
+    <string name="room_rate_pay_later_due_now">{amount} a pagar ahora</string>
     <!-- Rooms and rates price/night, i.e. $100/night -->
     <string name="room_rate_per_night_template">%s por noche</string>
     <!-- Rooms and rates resort fees template when fees are included in price displayed i.e. This hotel charges additional fees of $25 -->
@@ -2569,6 +2574,8 @@
     <!-- Price displayed on map pop-up bubbles (e.g., "From $179").  (HP, SH) -->
     <string name="map_snippet_price_template">Desde %s</string>
     <string name="From_x_per_night_template">Desde %s/noche</string>
+    <!-- Button text prompting the user to search this area on the map -->
+    <string name="Search_this_area">Buscar en esta zona</string>
 
     <!-- Widget -->
     <!-- Default Loading message for widget -->
@@ -2675,6 +2682,15 @@
     <string name="AmenityExtendedParking">Aparcamiento ampliado</string>
     <!-- Free parking amenity -->
     <string name="AmenityFreeParking">Aparcamiento gratuito</string>
+
+    <!-- Hotel Filter Amenities -->
+    <!-- Free internet -->
+    <string name="FilterFreeInternet">Internet gratuito</string>
+    <!-- Free breakfast -->
+    <string name="FilterFreeBreakfast">Desayuno incluido</string>
+    <!-- Free airport shuttle amenity -->
+    <string name="FilterFreeAirportShuttle">Traslado al aeropuerto gratuito</string>
+
 
     <!-- User Reviews list strings -->
     <!-- Loading text prompt -->
@@ -2810,7 +2826,8 @@
     <string name="not_included_in_the_price">No incluidas en el precio</string>
     <!-- View Room button text -->
     <string name="view_room_button_text">Ver habitación</string>
-
+    <!-- Book Room button text -->
+    <string name="book_room_button_text">Reserva</string>
     <!-- Share via when user is shareing hotel listing -->
     <string name="share_via">Compartir por</string>
     <!-- Renovation Notice -->
@@ -3717,9 +3734,11 @@
     <!-- Children age label on hotel search -->
     <string name="children_age_label">(0 - 17 años)</string>
 
-    <!-- Filters Strings -->
+    <!-- Hotel Filters Strings -->
     <string name="neighborhoods">Zonas</string>
     <string name="amenities">Servicios</string>
     <string name="plus_vip">+VIP</string>
     <string name="star_rating">Clasificación</string>
+    <string name="show_more">VER MÁS</string>
+    <string name="show_less">VER MENOS</string>
 </resources>
