--- a/project/src/main/res/values-zh-rTW/strings.xml
+++ b/project/src/main/res/values-zh-rTW/strings.xml
@@ -212,6 +212,11 @@
     <!-- Text for enter payment details line 2 -->
     <string name="checkout_hotelsv2_enter_payment_details_line2">選擇付款類型</string>
 
+    <!-- Hotels V2 slide to reserve -->
+    <string name="hotelsv2_slide_reserve">滑動以預訂</string>
+    <!-- Hotels V2 slide to purchase -->
+    <string name="hotelsv2_slide_purchase">滑動以購買</string>
+
     <!-- Car error strings -->
     <!-- Message for user that pick-up time is too early."  -->
     <string name="pick_up_time_error">請調整您的取車或還車時間。</string>
@@ -221,7 +226,7 @@
     <string name="date_out_of_range">此日期距現在太遠，請選擇距現在較近的日期。</string>
     <!-- Message for user that increase your reservation duration. -->
     <string name="reservation_time_too_short">請延長您的預訂時間。</string>
-    <!-- Shown to user when they try to book something already booked -->
+    <!-- Shown to user in case the reservation timed out -->
     <string name="reservation_time_out">還在嗎？您的工作階段已經逾時。請再次嘗試搜尋。</string>
     <!-- Shown to user when they try to book something already booked -->
     <string name="reservation_already_exists">不好意思，您似乎已經預訂好這個行程。請檢查您的行程或電子郵件。</string>
@@ -835,7 +840,7 @@
     <!-- Rooms and rates pay now -->
     <string name="room_rate_pay_now">立即付款</string>
     <!-- Rooms and rates pay later deposit due now -->
-    <string name="room_rate_pay_later_due_now">現在應付</string>
+    <string name="room_rate_pay_later_due_now">{amount}現在應付</string>
     <!-- Rooms and rates price/night, i.e. $100/night -->
     <string name="room_rate_per_night_template">%s/晚</string>
     <!-- Rooms and rates resort fees template when fees are included in price displayed i.e. This hotel charges additional fees of $25 -->
@@ -2569,6 +2574,8 @@
     <!-- Price displayed on map pop-up bubbles (e.g., "From $179").  (HP, SH) -->
     <string name="map_snippet_price_template">最低價 %s</string>
     <string name="From_x_per_night_template">最低 %s/晚</string>
+    <!-- Button text prompting the user to search this area on the map -->
+    <string name="Search_this_area">搜尋此地區</string>
 
     <!-- Widget -->
     <!-- Default Loading message for widget -->
@@ -2675,6 +2682,15 @@
     <string name="AmenityExtendedParking">延時停車</string>
     <!-- Free parking amenity -->
     <string name="AmenityFreeParking">免費停車</string>
+
+    <!-- Hotel Filter Amenities -->
+    <!-- Free internet -->
+    <string name="FilterFreeInternet">免費上網</string>
+    <!-- Free breakfast -->
+    <string name="FilterFreeBreakfast">免費早餐</string>
+    <!-- Free airport shuttle amenity -->
+    <string name="FilterFreeAirportShuttle">免費機場接駁車</string>
+
 
     <!-- User Reviews list strings -->
     <!-- Loading text prompt -->
@@ -2810,7 +2826,8 @@
     <string name="not_included_in_the_price">未含在價格內</string>
     <!-- View Room button text -->
     <string name="view_room_button_text">查看客房</string>
-
+    <!-- Book Room button text -->
+    <string name="book_room_button_text">預訂</string>
     <!-- Share via when user is shareing hotel listing -->
     <string name="share_via">分享到</string>
     <!-- Renovation Notice -->
@@ -3716,9 +3733,11 @@
     <!-- Children age label on hotel search -->
     <string name="children_age_label">(0-17 歲)</string>
 
-    <!-- Filters Strings -->
+    <!-- Hotel Filters Strings -->
     <string name="neighborhoods">鄰近地區</string>
     <string name="amenities">設施服務</string>
     <string name="plus_vip">+VIP</string>
     <string name="star_rating">星級評等</string>
+    <string name="show_more">顯示更多</string>
+    <string name="show_less">隱藏部分內容</string>
 </resources>
